--- a/api-runtime/rest-runtime/admin-web/AdminWeb.go.org
+++ b/api-runtime/rest-runtime/admin-web/AdminWeb.go.org
@@ -166,6 +166,117 @@ func top(c echo.Context) error {
 	return c.HTML(http.StatusOK, htmlStr)
 }
 
+func getResourceList_JsonByte(resourceName string) ([]byte, error) {
+	url := "http://localhost:1024/spider/" + resourceName
+
+        // get object list
+        res, err := http.Get(url)
+        if err != nil {
+                return nil, err
+        }
+        resBody, err := ioutil.ReadAll(res.Body)
+        res.Body.Close()
+        if err != nil {
+                return nil, err
+        }
+	return resBody, err
+}
+
+// F5, X ("5", "driver", "deleteDriver()", "2")
+func makeActionTR_html(colspan string, f5_href string,  delete_href string, fontSize string) string {
+	if fontSize == "" { fontSize = "2" }
+
+        strTR := fmt.Sprintf(`
+		<tr bgcolor="#FFFFFF" align="right">
+		    <td colspan="%s">
+			<a href="%s">
+			    <font size=2><b>&nbsp;F5</b></font>
+			</a>
+			&nbsp;
+			<a href="javascript:%s;">
+			    <font size=2><b>&nbsp;X</b></font>
+			</a>
+			&nbsp;
+		    </td>
+		</tr>
+       		`, colspan, f5_href, delete_href, fontSize) 
+
+	return strTR
+}
+
+//         fieldName-width
+// number, fieldName0-200, fieldName1-400, ... , checkbox
+func makeHeaderTRList_html(bgcolor string, fontSize string, nameWidthMap map[string]string) string {
+	if bgcolor == "" { bgcolor = "#DDDDDD" }
+	if fontSize == "" { fontSize = "2" }
+
+	// (1) header number field
+        strTR := fmt.Sprintf(`
+		<tr bgcolor="%s" align="center">
+		    <td width="15">
+			    <font size=%s><b>&nbsp;#</b></font>
+		    </td>
+		`, bgcolor, fontSize)
+
+	// (2) header title field
+	for key := range nameWidthMap {
+		str := fmt.Sprintf(`
+			    <td width="%s">
+				    <font size=2>%s</font>
+			    </td>a
+			`, key, nameWidthMap[key])
+		strTR += str
+	}
+	
+	// (3) header checkbox field
+        strTR += `
+		    <td width="15">
+			    <input type="checkbox" onclick="toggle(this);" />
+		    </td>
+		</tr>
+		`
+	return strTR
+}
+
+// number, Provider Name, Driver File, Driver Name, checkbox
+func makeDriverTRList_html(bgcolor string, height string, fontSize string, infoList []*dim.CloudDriverInfo) string {
+	if bgcolor == "" { bgcolor = "#FFFFFF" }
+	if height == "" { height = "30" }
+	if fontSize == "" { fontSize = "2" }
+
+        // make base TR frame for info list
+        strTR := fmt.Sprintf(`
+                <tr bgcolor="%s" align="center" height="%s">
+                    <td width="15">
+                            <font size=%s>$$NUM$$</font>
+                    </td>
+                    <td width="200">
+                            <font size=%s>$$S1$$</font>
+                    </td>
+                    <td width="200">
+                            <font size=%s>$$S2$$</font>
+                    </td>
+                    <td width="250">
+                            <font size=%s>$$S3$$</font>
+                    </td>
+                    <td width="15">
+                        <input type="checkbox" name="check_box" value=$$S1$$>
+                    </td>
+                </tr>
+       		`, bgcolor, height, fontSize) 
+
+        strData := ""
+	// set data and make TR list
+        for i, one := range infoList{
+                str := strings.ReplaceAll(strTR, "$$NUM$$", strconv.Itoa(i+1))
+                str = strings.ReplaceAll(str, "$$S1$$", one.ProviderName)
+                str = strings.ReplaceAll(str, "$$S2$$", one.DriverLibFileName)
+                str = strings.ReplaceAll(str, "$$S3$$", one.DriverName)
+                strData += str
+        }
+
+	return strData
+}
 //================ Driver Info Management
 // (1) make info list
 // (2) make input field and add
@@ -173,55 +284,29 @@ func top(c echo.Context) error {
 func driver(c echo.Context) error {
 	cblog.Info("call driver()")
 
-	res, err := http.Get("http://localhost:1024/spider/driver")
-        if err != nil {
-		cblog.Error(err)
-		return echo.NewHTTPError(http.StatusInternalServerError, err.Error())
+	// (1) get driver info list @todo if empty list
+        resBody, err := getResourceList_JsonByte("driver")
+	if err != nil {
+                cblog.Error(err)
+                return echo.NewHTTPError(http.StatusInternalServerError, err.Error())
         }
-        resBody, err := ioutil.ReadAll(res.Body)
-        res.Body.Close()
-        if err != nil {
-		cblog.Error(err)
-		return echo.NewHTTPError(http.StatusInternalServerError, err.Error())
-        }
-
         var info struct {
-                Result []*dim.CloudDriverInfo `json:"driver"`
+                ResultList []*dim.CloudDriverInfo `json:"driver"`
         }
 	json.Unmarshal(resBody, &info)
 
+	// (2) make Action TR
+// F5, X ("5", "driver", "deleteDriver()", "2")
+func makeActionTR_html(colspan string, f5_href string,  delete_href string, fontSize string) string {
 
-	// (1) make info list
-	strTR :=  ` 
-		<tr bgcolor="#FFFFFF" align="center" height="30">
-		    <td width="15">
-			    <font size=2>$$NUM$$</font>
-		    </td>
-		    <td width="200">
-			    <font size=2>$$S1$$</font>
-		    </td>
-		    <td width="200">
-			    <font size=2>$$S2$$</font>
-		    </td>
-		    <td width="250">
-			    <font size=2>$$S3$$</font>
-		    </td>
-		    <td width="15">
-			<input type="checkbox" name="check_box" value=$$S1$$>
-		    </td>
-		</tr>
-	`
+	// (3) make Table Header TR
+// number, fieldName0-200, fieldName1-400, ... , checkbox
+func makeHeaderTRList_html(bgcolor string, fontSize string, nameWidthMap map[string]string) string {
 
-	strData := ""
-	for i, one := range info.Result {
-		str := strings.ReplaceAll(strTR, "$$NUM$$", strconv.Itoa(i+1))
-		str = strings.ReplaceAll(str, "$$S1$$", one.DriverName)
-		str = strings.ReplaceAll(str, "$$S2$$", one.ProviderName)
-		str = strings.ReplaceAll(str, "$$S3$$", one.DriverLibFileName)
-		strData += str
-	}
+	// (4) make info TR list
+	strData := makeDriverTRList_html("", "", "", info.ResultList)
 
-	// (2) make input field and add
+	// (5) make input field and add
 	// attach text box for add
 	strTextBox := `
                 <tr bgcolor="#FFFFFF" align="center" height="30">
@@ -343,7 +428,7 @@ func driver(c echo.Context) error {
 		    </table>
 		</body>
 		</html>
-		`
+	`
 
 	htmlStr = strings.ReplaceAll(htmlStr, "$$SPIDER_SERVER$$", "http://" + HostIPorName + ServicePort) // ServicePort = ":1024"
 	htmlStr = strings.ReplaceAll(htmlStr, "$$DATA$$", strData)
@@ -358,13 +443,8 @@ fmt.Println(htmlStr)
 func credential(c echo.Context) error {
         cblog.Info("call credential()")
 
-        res, err := http.Get("http://localhost:1024/spider/credential")
-        if err != nil {
-                cblog.Error(err)
-                return echo.NewHTTPError(http.StatusInternalServerError, err.Error())
-        }
-        resBody, err := ioutil.ReadAll(res.Body)
-        res.Body.Close()
+        // get credential list
+        resBody, err := getResourceList_JsonByte("credential")
         if err != nil {
                 cblog.Error(err)
                 return echo.NewHTTPError(http.StatusInternalServerError, err.Error())
